welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: not found: value num
  if (nums(0)>=num(1)){  var max = nums(0);var max2 = nums(1)}
               ^